# Booking

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
event-booking-app/: main.py
event-booking-app/application/use_cases/: cancel_booking.py  create_booking.py  create_event.py  get_available_slots.py  get_booking.py  update_booking.py
event-booking-app/domain/entities/: __init__.py  event.py  time_slot.py
event-booking-app/domain/repositories/: __init__.py  booking_repository.py  event_repository.py  time_slot_repository.py
event-booking-app/infrastructure/api/: __init__.py  routes.py
event-booking-app/infrastructure/database/: models.py  repositories.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BookingForm.jsx  EventDetails.jsx  EventList.jsx
frontend/src/services/: api.js
src/: main.py
src/application/use_cases/: cancel_booking.py  create_booking.py  create_event.py  get_available_slots.py  get_booking.py  update_booking.py
src/domain/entities/: booking.py  event.py  time_slot.py
src/domain/repositories/: booking_repository.py  event_repository.py  time_slot_repository.py
src/infrastructure/api/: routes.py  schemas.py
src/infrastructure/database/: __init__.py  database.py  models.py  repositories.py
